<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="error_service_unavailable">Service unavailable error.</string>
    <string name="error_client">Contact the support for help.</string>
    <string name="error_server">Server side error.\n</string>
    <string name="error_unknown">Something went wrong.\n</string>
    <string name="stop_recording">Stop recording</string>
    <string name="apply">Apply</string>
    <string name="record_again">Record again</string>
    <string name="listening">Listening...</string>
    <string name="start_talking">Click record and start talking</string>
    <string name="record_audio">Record audio</string>
    <string name="error_speech_recognition_unavailable">Speech recognition is not available</string>
    <string name="translate">Translate</string>
</resources>